# openapi/openapi.yaml
@@ -1554,37 +1554,34 @@ paths:
       tags:
         - mail_auth
       description: ユーザー登録
-      parameters:
-        - name: email
-          in: query
-          description: email
-          required: true
-          schema:
-            type: string
-        - name: password
-          in: query
-          description: password
-          required: true
-          schema:
-            type: string
-        - name: name
-          in: query
-          description: name
-          required: true
-          schema:
-            type: string
-        - name: bureau_id
-          in: query
-          description: bureau_id
-          required: true
-          schema:
-            type: integer
-        - name: role_id
-          in: query
-          description: role_id
-          required: true
-          schema:
-            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - email
+                - password
+                - name
+                - bureau_id
+                - role_id
+              properties:
+                email:
+                  type: string
+                  description: email
+                password:
+                  type: string
+                  description: password
+                name:
+                  type: string
+                  description: name
+                bureau_id:
+                  type: integer
+                  description: bureau_id
+                role_id:
+                  type: integer
+                  description: role_id
       responses:
         "200":
           description: ユーザー登録完了
@@ -1592,6 +1589,16 @@ paths:
             application/json:
               schema:
                 type: object
+                required:
+                  - accessToken
+                  - userID
+                properties:
+                  accessToken:
+                    type: string
+                    description: アクセストークン
+                  userID:
+                    type: integer
+                    description: ユーザーID
       x-codegen-request-body-name: mailAuthSignUp
   /mail_auth/signin:
     post:
